mensaje para indicar cambios 2

--- a/WebFeriaVirtual/Views/Home/ListaUsuarios.cshtml
+++ b/WebFeriaVirtual/Views/Home/ListaUsuarios.cshtml
@@ -11,6 +11,7 @@
 <br />
 @Html.ActionLink("Lista de usuarios Productor", "ListaProduct", "Productor")
 <br />
-@Html.ActionLink("Lista de usuarios Transportista", "ListaTrans", "Transportista")
+@Html.ActionLink("Lista de usuarios Transportista", "ListaTransportista", "Transportista")
 <br />
 @Html.ActionLink("Lista de usuarios Consultor", "ListaConsul", "Consultor")
+
