--- a/WebFeriaVirtual/Views/Shared/_Layout.cshtml
+++ b/WebFeriaVirtual/Views/Shared/_Layout.cshtml
@@ -45,6 +45,9 @@
                         <li>
                             @Html.ActionLink("Iniciar como Productor", "LoginProduct", "Productor")
                         </li>
+                        <li>
+                            @Html.ActionLink("Iniciar como Transportista", "LoginTransportista", "Transportista")
+                        </li>
                     }
                 </ul>
             </div>
