--- a/WebFeriaVirtual/Views/UsuarioInt/ListaUsuInt.cshtml
+++ b/WebFeriaVirtual/Views/UsuarioInt/ListaUsuInt.cshtml
@@ -13,6 +13,7 @@
     <tbody>
         <tr>
             <th>Nombre</th>
+            <th>Region</th>
             <th>Direccion</th>
             <th>Telefono</th>
             <th>Correo</th>
@@ -23,6 +24,7 @@
         {
             <tr>
                 <td>@usuarioInterno.Nombre</td>
+                <td>@usuarioInterno.Region.Nombre</td>
                 <td>@usuarioInterno.Direccion</td>
                 <td>@usuarioInterno.Telefono</td>
                 <td>@usuarioInterno.Correo</td>
