--- a/WebFeriaVirtual/Views/Home/ListaCrearUsuarios.cshtml
+++ b/WebFeriaVirtual/Views/Home/ListaCrearUsuarios.cshtml
@@ -11,7 +11,7 @@
 <br />
 @Html.ActionLink("Productor", "CreateProduct", "Productor")
 <br />
-<p>Transportista</p>
+@Html.ActionLink("Transportista", "CreateTransportista", "Transportista")
 <br />
 <p>Consultor</p>
 
