--- a/WebFeriaVirtual/Views/UsuarioInt/Edit.cshtml
+++ b/WebFeriaVirtual/Views/UsuarioInt/Edit.cshtml
@@ -9,6 +9,10 @@
 {
     @Html.HiddenFor(u => u.Id)
     <br />
+    @Html.LabelFor(u => u.IdRegion, "Region")
+    <br />
+    @Html.DropDownListFor(u => u.IdRegion, new SelectList(ViewBag.regiones, "Id", "Nombre"))
+    <br />
     @Html.LabelFor(u => u.Nombre)
     <br />
     @Html.TextBoxFor(u => u.Nombre)
